styles/index.css
:root {

    --color-background: #fff;
    --color-L100: #fff;
    --color-D100: #171d23;
    --color-D80: #002a3a;
    --color-D60: #636f7d;
    --color-D50: #707b88;
    --color-D40: #7e8894;
    --color-D30: #99a1ab;
    --color-D20: #b3bac3;
    --color-D10: #f5f5f5;
    --color-D06: #f6f5f4;
    --color-G300: #11693f;
    --color-G200: #0f9d44;
    --color-G100: #0dd149;
    --color-G30: #c3f4d3;
    --color-G06: #eefcf2;
    --color-B300: #002a3a;
    --color-B200: #0685c3;
    --color-B100: #00afff;
    --color-B30: #b6e6fc;
    --color-B06: #f0faff;
    --color-O300: #725122;
    --color-O200: #b97311;
    --color-O100: #ff9500;
    --color-O30: #ffe1b8;
    --color-O06: #fff9f0;
    --color-V300: #2c3278;
    --color-V200: #3e3da7;
    --color-V100: #5047d7;
    --color-V30: #cbc9f3;
    --color-V06: #f3f2fc;
    --color-R300: #59212d;
    --color-R200: #8d1f25;
    --color-R100: #c11d1d;
    --color-R30: #f4bebe;
    --color-R06: #fdf2f2;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: #f6f5f4;
    font-family: 'Roboto', sans-serif;

}

ul>li {
    list-style-type: none;
}

.container {
    max-width: 1024px;
    margin: 0 auto;
}

h1 {
    text-align: left;
    font-size: 50px;
    line-height: 52px;
    margin: 40px 0;
    color: var(--color-D80);
}



.form {
    background-color: #fff;
    padding: 30px;
    border-radius: 12px;
    display: flex;
}



.row {
    display: flex;
    margin-right: 10px;
    gap: 10px;
}

.wrapper {
    flex-grow: 1;
}


/* начало блока "вариант рассчета" */
.calculation-option {
    width: 100%;
    padding: 28px 16px 10px;
    background-color: #f5f5f5;
    border: 1px solid transparent;
    border-radius: 12px;
    position: relative;
    transition: all 0.2s;
    margin-bottom: 10px;
    cursor: pointer;
}




.calculation-option label {
    position: absolute;
    top: 8px;
    left: 16px;
    font-size: 14px;
    opacity: 0.5;
    pointer-events: none;
}

.calculation-option p {
    font-size: 16px;
    pointer-events: none;

}

.calculation-option__list {
    position: absolute;
    width: 100%;
    top: 60px;
    left: 0px;
    padding: 8px;
    border-radius: 12px;
    background-color: var(--color-L100);
    box-shadow: 0 12px 16px rgba(0, 0, 0, .06);
    opacity: 0;
    visibility: hidden;
    transition: all 0.2s;
    z-index: 10;
}

.calculation-option__list li {
    padding: 12px 16px;
    border-radius: 8px;
    font-weight: bold;
    cursor: pointer;
}

.calculation-option__list li:first-child {
    background-color: #f5f5f5;

}

.calculation-option li:hover {
    background-color: #f5f5f5;
}


/* начало блока "Сумма кредита" */
.sum-credit {
    padding: 28px 16px 10px;
    background-color: #f5f5f5;
    border: 1px solid transparent;
    border-radius: 12px;
    position: relative;
    transition: all 0.2s;
    margin-bottom: 10px;
}


.sum-credit label {
    position: absolute;
    top: 8px;
    left: 16px;
    font-size: 14px;
    opacity: 0.5;
}

.sum-credit input {
    border: none;
    background-color: transparent;
    font-size: 16px;
    pointer-events: none;
}

.sum-credit input:focus {
    outline: none;
}

/* начало блока "Срок кредита" */
.credit-term {
    padding: 28px 16px 10px;
    background-color: #f5f5f5;
    border: 1px solid transparent;
    border-radius: 12px;
    position: relative;
    transition: all 0.2s;
    flex: 0 0 50%;
    max-width: 50%;
    margin-bottom: 10px;

}

.credit-term input {
    border: none;
    background-color: transparent;
    font-size: 16px;
}

.credit-term label {
    position: absolute;
    top: 8px;
    left: 16px;
    font-size: 14px;
    opacity: 0.5;
    pointer-events: none;
}

.credit-term input:focus {
    outline: none;
}

/* начало блока "Вариант расчета" */
.month-or-year {
    padding: 28px 16px 10px;
    background-color: #f5f5f5;
    border: 1px solid transparent;
    border-radius: 12px;
    position: relative;
    transition: all 0.2s;
    flex: 0 0 50%;
    max-width: 50%;
    margin-bottom: 10px;

}

.month-or-year label {
    position: absolute;
    top: 8px;
    left: 16px;
    font-size: 14px;
    opacity: 0.5;
    pointer-events: none;
}

.month-or-year__list {
    position: absolute;
    width: 100%;
    top: 60px;
    left: 0px;
    padding: 8px;
    border-radius: 12px;
    background-color: var(--color-L100);
    box-shadow: 0 12px 16px rgba(0, 0, 0, .06);
    opacity: 0;
    visibility: hidden;
    transition: all 0.2s;
    z-index: 10;
}

.month-or-year__list li {
    padding: 12px 16px;
    border-radius: 8px;
    font-weight: bold;
    cursor: pointer;
}

.month-or-year__list li:hover {
    background-color: #f5f5f5;
}

.month-or-year__list li:first-child {
    background-color: #f5f5f5;

}

.month-or-year p {
    font-size: 16px;
    pointer-events: none;

}

/* начало блока "Ставка" */
.count-procent {
    padding: 28px 16px 10px;
    background-color: #f5f5f5;
    border: 1px solid transparent;
    border-radius: 12px;
    position: relative;
    transition: all 0.2s;
    flex: 0 0 50%;
    max-width: 50%;
}

.count-procent input {
    border: none;
    background-color: transparent;
    font-size: 16px;
}

.count-procent input:focus {
    outline: none;
}

.count-procent label {
    position: absolute;
    top: 8px;
    left: 16px;
    font-size: 14px;
    opacity: 0.5;
    pointer-events: none;
}

/* начало блока Калькуляция подсчет */
.calculation {
    width: 370px;
    border-radius: 20px;
    border: 1px solid var(--color-D10);
    margin-left: 10px;
    padding: 30px;
}

.calculation__content {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 15px;

}

.calculation__text {
    margin-top: 20px;
    font-size: 12px;
    line-height: 16px;
    text-align: center;
    color: var(--color-D60);
    opacity: 0.9;
}

.calculation__button {
    width: 100%;
    border-color: transparent;
    background-color: var(--color-B300);
    color: var(--color-L100);
    padding: 0 16px;
    height: 44px;
    border-radius: 8px;
    font-size: 14px;
    line-height: 20px;
    font-weight: bold;
    cursor: pointer;
    transition: all 0.2s;
}


.calculation__button:hover {
    background-color: var(--color-D100);
}

.question {
    margin: 10px 0;
    color: var(--color-D60);
    font-family: var(--font-open-sans);
    font-size: 14px;
    line-height: 20px;
    position: relative;

}

/* начало блока Вопрос-подсказка */
.question span {
    pointer-events: none;
}

.question__help {
    width: 260px;
    height: 150px;
    background-color: var(--color-D100);
    color: var(--color-B06);
    position: absolute;
    padding: 15px;
    border-radius: 20px;
    bottom: 30px;
    left: -20px;
    opacity: 0;
    transition: 0.2s;
    z-index: -1;
    text-align: center;
}

.question__help::after {
    content: '';
    position: absolute;
    left: 115px;
    bottom: -20px;
    border: 10px solid transparent;
    border-top: 10px solid var(--color-D100);
}

.question svg {
    display: inline-block;
    vertical-align: middle;
    width: 20px;
    height: 20px;
    color: var(--color-D100);
}

.question svg:hover+.question__help {
    transition: 0.5s;
    opacity: 1;
    z-index: 1;
}

/* начало блока Toggle радиобаттон */
.toggle-button {
    display: flex;
    gap: 10px;
    background-color: #f5f5f5;
    height: 42px;
    padding: 4px;
    border-radius: 12px;

}

.toggle-button label {
    width: 100%;
    position: relative;
    cursor: pointer;

}

.toggle-button input {
    appearance: none;
    border-radius: 8px;
    cursor: pointer;
    position: absolute;
}

.toggle-button span {
    width: 100%;
    height: 34px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    font-size: 14px;
    line-height: 20px;
    transition: all .3s cubic-bezier(.46, 0, .03, .99);
}

.toggle-button label input:checked+span {
    background-color: var(--color-L100);
    border-radius: 8px;
    box-shadow: 0 -2px 6px rgba(0, 0, 0, .02), 0 10px 14px rgba(20, 36, 56, .06);
}

.payment-schedule__list {
    margin-top: 50px;
    background-color: #fff;
    padding: 30px;
    border-radius: 12px;
    display: none;
}

.payment-schedule__item {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    align-items: center;

    padding: 16px 20px;
}

.payment-schedule__item:nth-child(even) {
    border-radius: 8px;
    background-color: #f5f5f5;


}

/* активность для всех блоков */
.active {
    border: 1px solid var(--color-B100);
}

.visible {
    opacity: 1;
    visibility: visible;
    display: block;
}

.transparent {
    background-color: transparent;
}

.hidden {
    display: none;
}


@media screen and (max-width: 1024px) {
    .form {
        flex-direction: column;
    }



    h1 {
        text-align: center;
        font-size: 30px;
        line-height: 38px;
        margin-bottom: 20px;
    }

    .calculation {
        margin-top: 20px;
        margin-left: 0px;
        width: 100%;
        padding: 15px;
    }
}

@media screen and (max-width: 480px) {
    .calculation-option label {
        font-size: 14px;
    }

    .toggle-button span {
        font-size: 12px;
        line-height: 20px;
    }
}

